crates/alder-driver/src/snapshots/alder_driver__compile__tests__parser_index_end.snap
---
source: crates/alder-driver/src/compile.rs
description: "let value = values[0)"
---
alder::syntax

  × I was expecting `]` after this index
   ╭─[/project/src/main.ald:1:21]
 1 │ let value = values[0)
   ·                   ┬ ┬
   ·                   │ ╰── expected `]`
   ·                   ╰── this `[` opens here
   ╰────
  help: write an index like `values[index]`
