crates/alder-driver/src/snapshots/alder_driver__compile__tests__parser_lambda_body.snap
---
source: crates/alder-driver/src/compile.rs
description: "let value = () -> [1 2]"
---
alder::syntax

  × I was expecting `,` or `]` after this array entry
   ╭─[/project/src/main.ald:1:22]
 1 │ let value = () -> [1 2]
   ·                   ┬  ┬
   ·                   │  ╰── expected `,` or `]`
   ·                   ╰── this `[` opens here
   ╰────
  help: separate array entries with commas and close the array with `]`
