crates/alder-driver/src/snapshots/alder_driver__compile__tests__parser_match_guard.snap
---
source: crates/alder-driver/src/compile.rs
description: "let value = match true { value if => 1 }"
---
alder::syntax

  × I was expecting an expression
   ╭─[/project/src/main.ald:1:35]
 1 │ let value = match true { value if => 1 }
   ·                          ┬        ┬
   ·                          │        ╰── expected an expression here
   ·                          ╰── this match arm starts here
   ╰────
