crates/alder-driver/src/snapshots/alder_driver__compile__tests__parser_match_open.snap
---
source: crates/alder-driver/src/compile.rs
description: "let value = match true of { true => 1 }"
---
alder::syntax

  × I was expecting `{` to start this match's arms
   ╭─[/project/src/main.ald:1:24]
 1 │ let value = match true of { true => 1 }
   ·             ┬          ┬
   ·             │          ╰── expected `{`
   ·             ╰── this `match` starts here
   ╰────
  help: write `match value { pattern => expression }`; Alder does not use
        `of` here
