crates/alder-driver/src/snapshots/alder_driver__compile__tests__parser_pattern_constructor_separator.snap
---
source: crates/alder-driver/src/compile.rs
description: let Some(first second) = value
---
alder::syntax

  × I was expecting `,` or `)` after this constructor argument
   ╭─[/project/src/main.ald:1:16]
 1 │ let Some(first second) = value
   ·         ┬      ┬
   ·         │      ╰── expected `,` or `)`
   ·         ╰── this `(` opens here
   ╰────
  help: separate constructor arguments with commas and close them with `)`
